Attach stub webapi to main router
